--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>D&D 5e Spells</h1>
-<p>Spells are cool</p>
-<p>try fireball</p>
-</body>
+    <head>
+        <title>Spellbook</title>
+    </head>
+    <body>
+        <h1>D&D 5e Spells</h1>
+        <p>Spells are cool</p>
+        <p>try fireball</p>
+    </body>
 </html>
