--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
         <title>Spellbook</title>
     </head>
     <body>
-        <h1>D&D 5e Spells</h1>
+        <h1>D&D 5e Spellbook Information</h1>
+        <h2>Spellbook</h2>
+        <div id="filters">
+            <div class="filtercat">
+                <a id="emptyspellbook" class="filterbutton">Empty Spellbook</a>
+                <br>
+            </div>
+
+        </div>
         <p>Spells are cool</p>
         <p>try fireball</p>
     </body>
